--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-{{ title }}
-<br/>
-{{ name }}<br/>
+<div class="container">
+	<app-course-list></app-course-list>
+</div>
 
-
-
-<input [(ngModel)]="name" name="name">
